Implemented logic for "Show More" button
Now if pressed, the details of weather alert will be shown as alert

--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -75,6 +75,7 @@
                 
                 <Button VerticalOptions="End"
                         HorizontalOptions="Fill"
+                        Clicked="ShowMoreAlertClicked"
                         Padding="00, 0, 230, 0"
                         BackgroundColor="#00FFFFFF"
                         Text="Show more..."
