--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -49,8 +49,7 @@
             
             <!-- Weather Image -->
             <Image Grid.Row="2" 
-                   x:Name="WeatherImage"
-                   Source="{Binding Weather.Current.Condition.ConditionIcon, StringFormat='{}https:{0}'}"
+                   Source="{Binding WeatherIcon}"
                    VerticalOptions="Start"
                    WidthRequest="300"
                    HeightRequest="300"/>
