--- a/kittyweather/Resources/Styles/Colors.xaml
+++ b/kittyweather/Resources/Styles/Colors.xaml
@@ -4,9 +4,9 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Primary">#A2D2FF</Color>
+    <Color x:Key="Secondary">#BDE0FE</Color>
+    <Color x:Key="Tertiary">#CDB4DB</Color>
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Gray100">#E1E1E1</Color>
