--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -4,11 +4,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:kittyweather.ViewModel"
              x:Class="kittyweather.Pages.WeatherPage"
-             BackgroundColor="LightBlue">
+             BackgroundColor="{DynamicResource Primary}">
 
     <ContentPage.Resources>
-        <Style x:Key="BlackBoxViewBg" TargetType="BoxView">
-            <Setter Property="Color" Value="Black"/>
+        <Style x:Key="InfoBoxView" TargetType="BoxView">
+            <Setter Property="Color" Value="{DynamicResource Secondary}"/>
             <Setter Property="Opacity" Value="0.5"/>
             <Setter Property="CornerRadius" Value="15"/>
             <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
@@ -56,7 +56,7 @@
             
             <!-- Weather Alerts -->
             <Grid Grid.Row="3" Margin="20, 0" x:Name="WeatherAlertBox" IsVisible="False">
-                <BoxView Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Style="{StaticResource InfoBoxView}"/>
                 
                 <Label Padding="10, 4, 0, 0"
                        Text="WEATHER ALERT:"
@@ -85,7 +85,7 @@
             
             <!-- Hourly weather -->
             <Grid Grid.Row="4" Margin="20">
-                <BoxView Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Style="{StaticResource InfoBoxView}"/>
                 
                 <CollectionView HeightRequest="100" ItemsSource="{Binding HourlyWeather}" HorizontalOptions="Center">
                     <CollectionView.ItemsLayout>
@@ -121,7 +121,7 @@
             <!-- Humidity and Cloud Cover -->
             <Grid Grid.Row="5" ColumnDefinitions="0.5*, 0.5*" Margin="20, 0" ColumnSpacing="20">
                 <!-- Humidity -->
-                <BoxView Grid.Column="0" Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Grid.Column="0" Style="{StaticResource InfoBoxView}"/>
                 
                 <Label Grid.Column="0"
                        Style="{StaticResource TitleLabel}"
@@ -135,7 +135,7 @@
                        FontSize="55"/>
 
                 <!-- Cloud cover -->
-                <BoxView Grid.Column="1" Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Grid.Column="1" Style="{StaticResource InfoBoxView}"/>
 
                 <Label Grid.Column="1"
                        Style="{StaticResource TitleLabel}"
@@ -153,7 +153,7 @@
             <!-- Air Pressure and Visibility -->
             <Grid Grid.Row="6" ColumnDefinitions="0.5*, 0.5*" Margin="20, 0" ColumnSpacing="20">
                 <!-- Air Pressure -->
-                <BoxView Grid.Column="0" Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Grid.Column="0" Style="{StaticResource InfoBoxView}"/>
 
                 <Label Grid.Column="0"
                        Style="{StaticResource TitleLabel}"
@@ -173,7 +173,7 @@
                        FontSize="20"/>
 
                 <!-- Visibility -->
-                <BoxView Grid.Column="1" Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Grid.Column="1" Style="{StaticResource InfoBoxView}"/>
 
                 <Label Grid.Column="1"
                        Style="{StaticResource TitleLabel}"
@@ -196,7 +196,7 @@
             <!-- UV Index and Precipitation -->
             <Grid Grid.Row="7" ColumnDefinitions="0.5*, 0.5*" Margin="20, 0" ColumnSpacing="20">
                 <!-- UV Index -->
-                <BoxView Grid.Column="0" Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Grid.Column="0" Style="{StaticResource InfoBoxView}"/>
 
                 <Label Grid.Column="0"
                        Style="{StaticResource TitleLabel}"
@@ -217,7 +217,7 @@
                        FontSize="20"/>
 
                 <!-- Precipitation -->
-                <BoxView Grid.Column="1" Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Grid.Column="1" Style="{StaticResource InfoBoxView}"/>
 
                 <Label Grid.Column="1"
                        Style="{StaticResource TitleLabel}"
@@ -239,7 +239,7 @@
 
             <!-- Wind speed and direction -->
             <Grid Grid.Row="8" ColumnDefinitions="*, *" Margin="20, 0">
-                <BoxView Grid.ColumnSpan="2" Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Grid.ColumnSpan="2" Style="{StaticResource InfoBoxView}"/>
 
                 <Label Grid.ColumnSpan="2" 
                        Style="{StaticResource TitleLabel}"
@@ -278,7 +278,7 @@
             <Grid Grid.Row="9" ColumnDefinitions="*, *" Margin="20, 0" ColumnSpacing="20">
 
                 <!-- Sunrise and sunset -->
-                <BoxView Grid.Column="0" Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Grid.Column="0" Style="{StaticResource InfoBoxView}"/>
 
                 <StackLayout Grid.Column="0">
                     <Label Style="{StaticResource TitleLabel}" Text="Sunrise:"/>
@@ -301,7 +301,7 @@
                 </StackLayout>
 
                 <!-- Moonrise and moonset -->
-                <BoxView Grid.Column="1" Style="{StaticResource BlackBoxViewBg}"/>
+                <BoxView Grid.Column="1" Style="{StaticResource InfoBoxView}"/>
 
                 <StackLayout Grid.Column="1">
                     <Label Style="{StaticResource TitleLabel}" Text="Moonrise:"/>
