--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -279,7 +279,7 @@
                            TextColor="White"
                            FontSize="30" />
 
-                    <Line Stroke="Black"
+                    <Line Stroke="White"
                           Margin="7, 0, 7, 0"
                           X2="200" />
 
@@ -304,7 +304,7 @@
                            TextColor="White"
                            FontSize="30" />
 
-                    <Line Stroke="Black"
+                    <Line Stroke="White"
                           Margin="7, 0, 7, 0"
                           X2="200" />
 
