Created basic WelcomePage design

--- a/kittyweather/AppShell.xaml
+++ b/kittyweather/AppShell.xaml
@@ -17,6 +17,9 @@
         <Tab Title="About" Icon="help.svg">
             <ShellContent ContentTemplate="{DataTemplate pages:AboutPage}"/>
         </Tab>
+        <Tab Title="testpage">
+            <ShellContent ContentTemplate="{DataTemplate pages:WelcomePage}"></ShellContent>
+        </Tab>
     </TabBar>
 
 </Shell>
