--- a/kittyweather/Pages/WelcomePage.xaml
+++ b/kittyweather/Pages/WelcomePage.xaml
@@ -4,6 +4,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="kittyweather.Pages.WelcomePage">
     <ContentPage.Content>
-        
+        <StackLayout>
+            <Label Text="Welcome to Kitty Weather!" />
+            <Label Text="Please enter your API key:" />
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
